<resources>
    <string name="app_name">SocialGiftMobile</string>
    <!-- Strings Login -->
    <string name="login">Login</string>
    <string name="username">Username...</string>
    <string name="password">Password...</string>
    <string name="email">E-mail...</string>
    <string name="surname">Surname...</string>
    <string name="loginString">Dont have an account?</string>
    <string name="registerString">Already have an account?</string>
    <string name="registerbutton">Register</string>


    <!--Strings Register-->
    <string name="pPhoto">Profile photo</string>
    <string name="next">Next</string>

    <!--String EditProfile-->
    <string name="deleteAccount">Delete account</string>
    <string name="editProfile">Edit profile</string>
    <string name="username2">User name</string>
    <string name="Lastname">Last name</string>
    <string name="email2">E-mail</string>
    <string name="changePassword">Change password</string>
    <string name="save">Save</string>
    <string name="changePphoto">Profile photo</string>
    <string name="TittleChangePhoto"> Introduce URL: </string>
    <string name="url"> URL... </string>
    <string name="submit">Submit</string>
    <string name="currentPassword">Current Password</string>
    <string name="newPassword">New Password</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="messages">Messages</string>
    <string name="notifications">Notifications</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="create">Create</string>
    <string name="nombre">Nombre:</string>
    <string name="descripci_n">Descripción:</string>
    <string name="fecha_de_creaci_n">Fecha de creación:</string>
    <string name="fecha_de_finalizaci_n">Fecha de finalización:</string>
    <string name="nombreunico">nombreunico</string>


    <!-- Strings Search fragment -->
    <string name="search_hint">Search...</string>
    <string name="cancel">Cancel</string>
    <string name="profile">Profile</string>

    <!-- Strings notifications fragment -->
    <string name="title">Notifications</string>


</resources>
